mainsite/css/style.css
/*
	Fonts and resets
						*/

@font-face { /* Fonts generated by Font Squirrel */
    font-family: 'High Pixel';
    src: url('../font/highpixel/highpixel.eot');
    src: url('../font/highpixel/highpixel.eot?#iefix') format('embedded-opentype'),
         url('../font/highpixel/highpixel.woff') format('woff'),
         url('../font/highpixel/highpixel.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face { /* From OKFOCUS */
	  font-family: 'Pixel Comic Sans'; /* Erm... hahahaha */
	  src: url('../font/pixelcomicsans/pixelcomicsans.eot?#iefix') format('embedded-opentype'), 
	       url('../font/pixelcomicsans/pixelcomicsans.woff') format('woff'), 
	       url('../font/pixelcomicsans/pixelcomicsans.ttf')  format('truetype'),
	       url('../font/pixelcomicsans/pixelcomicsans.svg#svgFontName') format('svg');
    font-weight: normal;
    font-style: normal;       
}

*{
	margin: 0;
	padding: 0;

	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	  		box-sizing: border-box;
}

body{
	background: #6DA46D;
	font-family: Helvetica, Arial, sans-serif;
}

#background-images{
	z-index: -1337;
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	margin-top: 200px;
}

header{
	width: 100%;
	background: #F5F5F5;
	padding: 20px 0;
	margin-bottom: 50px;
	box-shadow: 0 5px 0 rgba(0,0,0,.15);
}

header .title{
	width: 80%;
	margin: 0 auto;
	overflow: hidden;
}

	header .title span{
		float: left;
		width: 20%;		
		padding: 25px 10px;
		text-transform: uppercase;
		font-size: 20px;
		font-family: 'High Pixel';
	}

	header .title span:first-child{ text-align: right; }

	header .title .logo{
		width: 60%;
		text-indent: -2345px;
		float: left;
		min-height: 100px;
		padding: 30px 0;
		background: url('../img/logodull.png') center no-repeat;
		background-size: 100%;
	}

	header .title .logo:hover{ opacity: .8; }

main{
	width: 70%;
	margin: 0 auto;
}

main .event, main .archive, main .socials-section{
	box-shadow: 0  5px 0 rgba(25, 25, 25, 0.2);
}

/* 
	event section
					*/

main .event .top, main .event .content, main .event .previous, main .archive, main .socials-section{
	border-bottom: 5px solid rgba(25, 25, 25, 0.2);
}

main .event .top, main .event .previous{
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	background: rgb(41, 41, 41);
}

main .event .top{
	padding: .25em 1em;
}

	main .event .top h1{
		letter-spacing: 30px;
		text-transform: uppercase;
		text-align: center;
		font-size: 40px;
		font-family: 'High Pixel', Arial, sans-serif;
		color: #f5f5f5;
	}

main .event .content{
	overflow: hidden;
	background-color: #f5f5f5;
}

	main .event .content table{
		width: 100%;
	}

	main .event .content table tr{
		display: block;
		overflow: hidden;
		padding: 15px 0;
		border-bottom: 2px solid rgba(25, 25, 25, 0.1);
		font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
		font-size: 2em;
		color: rgba(0,0,0,.85);
	}

	main .event .content table tr.info-what{
		padding: 1em 2em;
		font-family: Helvetica, Arial, sans-serif;
		font-size: 1em;
		color: #474747;
		background: #E4E4E4;
	}

	main .event .content table tr.info-what td{
		display: block;
		text-align: center;
	}

	main .event .content table tr:last-child{ border: none; }

		main .event .content table td{
			display: inline-block;
		}

		main .event .content table td.q{
			text-align: right;
			width: 20%;
			padding-right: 10px;
			border-right: 2px solid rgba(25, 25, 25, 0.1);
		}

		main .event .content .col td.a{
			text-align: left;
			width: 80%;
			padding-left: 10px;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
			color: rgb(29, 29, 29);
		}

			.more-info{
				padding: 0 5px;
				text-transform: uppercase;
				font-family: 'High Pixel', Helvetica, Arial, sans-serif;
				font-size: .5em;					
				display: inline-block;
				color: #222;
				text-decoration: none;
				border-bottom: 3px solid #CFC679;
			}

			.more-info:hover{
				border-color: #DDD;
			}

			.ordinal-suffix{
				font-size: .5em;
				vertical-align: super;
			}

main .event .previous{
	color: #f5f5f5;
	overflow: hidden;
}

	main .event .previous p, main .event .previous .meetings{
		float: left;
	}

	main .event .previous p{
		font-size: 10px;
		letter-spacing: 5px;
		width: 20%;
		text-transform: uppercase;
		font-family: 'High Pixel', Arial, sans-serif;
		padding: 1.5em 2.5em;
		overflow: hidden;
	}

	main .event .previous p.more{
		display: block;
		text-align: right;
	}

	main .event .previous p.more:hover{

	}

	main .event .previous p.more:hover a{
		border-color: #CFC679;
	}

		main .event .previous p.more a{
			padding-left: 5px;
			display: inline-block;
			color: #F5F5F5;
			text-decoration: none;
			border-bottom: 2px solid #8A8585
		}			

	main .event .previous .meetings{	
		padding: 10px;
		width: 20%;
		text-align: right;
		border-right: 2px solid rgba(255,255,255,.05);
		font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	}

	main .event .previous p.more:hover,
	main .event .previous .meetings:hover{	
		background: rgba(255,255,255,.05);
		cursor: pointer;
	}

	main .event .previous .meetings:last-child{
		border: none;
		padding: 0;
	}

			main .event .previous .meetings h2{
				font-size: 1em;
			}

			main .event .previous .meetings h3{
				color: rgb(175, 175, 175);
				font-size: 0.7em;
				font-weight: 500;
			}

/*
	archive
			*/

main .archive{
	overflow: hidden;
	padding: 1em 0;
	background: rgb(41, 41, 41);
}

	main .archive .meeting{
		padding: 1em 0;
	}

	main .archive .meeting:nth-child(1){		
		border-top: 5px dashed rgb(41, 41, 41);
	}

	main .archive .meeting:nth-child(odd){
		border-bottom: 5px dashed rgb(41, 41, 41);
		background: rgb(49, 51, 50);
	}
	main .archive .meeting:nth-child(even){
		border-bottom: 5px dashed rgb(49, 51, 50);
		background: rgb(41, 41, 41);
	}

	main .archive .event-name{
		padding: 0 10px;
		text-align: right;
		width: 20%;
		float: left;
		font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
		border-right: 2px solid rgba(255, 255, 255, 0.05);
	}

		main .archive .event-name h1{
				color: #F5F5F5;
				font-size: 1em;
			}

		main .archive .event-name h2{
			color: rgb(175,175,175);
			font-size: 0.7em;
			font-weight: 500;
		}

	main .archive .details{
		display: inline-block;
		width: 80%;
	}

		main .archive .details .col{
			width: 20%;
			float: left;
			padding: 0 1em;
		}

		main .archive .details .desc{
			width: 60%;
		}

		main .archive .details .col h2{
			margin-bottom: .25em;
			font-size: 16px;
			font-family: 'High Pixel', Helvetica, Arial, sans-serif;
			color: #F5F5F5;
			text-transform: uppercase;
		}

		main .archive .details .col:nth-child(1) h2{ color: #79A6CF }
		main .archive .details .col:nth-child(2) h2{ color: #CF7979 }
		main .archive .details .col:nth-child(3) h2{ color: #CFC679; }	

		main .archive .details .col ul li{
			list-style: none;
			color: white;
			font-size: 0.8em;			
		}

main .socials-section{
	margin-top: 20px;
	padding: 20px;
	text-align: center;
	font-family: 'Anonymous Pro', Helvetica, Arial, sans-serif;
	font-size: 1.25em;
	overflow: hidden;
	color: #2c2c2c;
	background-color: #f5f5f5;
}

.social{
	padding-bottom: 5px;
	overflow: hidden;
	margin: 30px 0;
}

.social .social-button-wrapper{
	width: 15%;
	float: left;
	padding-right: 10px;
	display: inline-block;
}

.social .social-button{
	display: block;
	height: 100px;
	font-family: 'High Pixel', Helvetica, Arial, sans-serif;
	text-align: center;
	text-transform: uppercase;
	text-decoration: none;
	color: white;
	padding: .25em 0;
	box-shadow: inset 0 -5px 0 rgba(25,25,25,.25), 0 5px 0 rgba(25,25,25,.25);
}

.social-button:hover{
	margin-top: 5px;
	box-shadow: inset 0 -5px 0 rgba(25,25,25,.25);
}

.social .join-us{
	padding: 0 0 0 2em;
	width: 70%;
	font-size: 2.5em;
}

.social .join-us .social-button{
	background: #79DA4C;
}

.social .facebook,
.social .twitter{
	overflow: hidden;
	text-indent: -5000px;
	background: no-repeat center;
	background-size: 80%;
}

.social .facebook{
	background-image: url('../img/facebook.png');
	background-color: #3B5998;
}
.social .twitter{
	background-image: url('../img/twitter.png');
	background-color: #4099FF;
}


/*
	footer
			*/

footer{
	width: 100%;
	background: rgb(41, 41, 41);
}

